# RapidOcrAndroidNcnn

./: BUILD.md  README.md  build.gradle  settings.gradle
OcrLibrary/: .gitignore  build.gradle
OcrLibrary/src/main/cpp/: CMakeLists.txt
OcrLibrary/src/main/cpp/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrUtils.h
OcrLibrary/src/main/cpp/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrUtils.cpp
OcrLibrary/src/main/java/com/benjaminwan/ocrlibrary/: OcrEngine.kt
app/: build.gradle
app/src/main/res/layout/: activity_gallery.xml
app/src/main/res/values/: strings.xml
keystore/: rapidocr.keystore
